[gd_scene load_steps=5 format=3 uid="uid://dv3lbrfbnt4tm"]

[ext_resource type="Script" path="res://combat/skills/fire_wall/script.gd" id="1_0jiy3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7dfxy"]
size = Vector3(2, 2, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_jusfv"]
size = Vector3(2, 2, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b6kla"]
transparency = 1
albedo_color = Color(0.690196, 0.360784, 0.192157, 0.72549)

[node name="Firewall" type="Node3D"]
script = ExtResource("1_0jiy3")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_7dfxy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("BoxMesh_jusfv")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_b6kla")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_time_timeout"]
